--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 openconnect-sso = "openconnect_sso.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 attrs = ">=18.2"
 colorama = "^0.4"
 importlib-metadata = { version = "^3.10.0", python = "<3.8" }
@@ -33,12 +33,13 @@ structlog = ">=20.1"
 toml = "^0.10"
 setuptools = ">40.0"
 
-PyQt5 = { version = "^5.12", optional = true }
-PyQtWebEngine = { version ="^5.12", optional = true }
+
 PySocks = "^1.7.1"
+PyQt6-WebEngine = "^6.3.1"
+PyQt6 = "^6.3.1"
 
 [tool.poetry.extras]
-full = [ "PyQt5", "PyQtWebEngine" ]
+full = [ "PyQt6", "PyQt6-WebEngine" ]
 
 [tool.poetry.dev-dependencies]
 coverage_enable_subprocess = "^1.0"
@@ -51,7 +52,7 @@ pytest-httpserver = "^1.0"
 setuptools-scm = { version ="^3.4", extras = ["toml"] }
 
 [tool.black]
-target-version = ['py36', 'py37', 'py38']
+target-version = ['py37', 'py38', 'py39']
 
 [build-system]
 requires = ["poetry>=0.12"]
