--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ pytest-httpserver = "^1.0"
 setuptools-scm = { version ="^3.4", extras = ["toml"] }
 
 [tool.black]
-target-version = ['py37', 'py38', 'py39']
+target-version = ['py37', 'py38']
 
 [build-system]
 requires = ["poetry>=0.12"]
